FIX: remove texture to fix overflow header and foter

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body {
 }
 
 /* Noise Texture Overlay */
-body::before {
+/* body::before {
     content: "";
     position: fixed;
     top: 0;
@@ -46,7 +46,7 @@ body::before {
     opacity: 0.1;
     pointer-events: none;
     z-index: 9998;
-}
+} */
 
 
 
